# rlm-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/rules/: handoff.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: claude_agent_lm.py  command_runner.py  harness_run.py  harness_serve.py  mini_run.py
rlm_kit/: README.md  __init__.py  _retry.py  _sandbox_agent.py  claude_agent_lm.py  config.py  container_interpreter.py  dataset.py  harness_serve.py  mcp.py  optimize.py  replay.py  rubric.py  runtime.py  sandbox.py  serving.py  skills.py  sub_lm.py  task.py  testing.py  trace.py
rlm_kit/examples/: harness_run.py
rlm_kit/tools/: __init__.py  command.py  fetch.py  harness.py  model.py  search.py  validation.py
tests/: test_claude_agent_lm.py  test_config.py  test_container_interpreter.py  test_contract.py  test_export_actions.py  test_harness_tool.py  test_integration_dspy.py  test_mcp.py  test_packaging.py  test_repl_safety.py  test_replay_dataset.py  test_retry.py  test_rubric.py  test_run_label_bundle.py  test_runtime.py  test_sandbox.py  test_scripted_interpreter.py  test_serving.py  test_skills.py  test_sub_lm.py  test_tools.py  test_trace.py
