[project]
name = "rlm-kit"
version = "0.2.0"
description = "A clean, reusable scaffold for building security tasks on DSPy Recursive Language Models (RLM)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.2.1",
    "pydantic>=2.9",
]

[project.optional-dependencies]
# Observability is opt-in: the scaffold runs without it.
observe = [
    "langfuse>=4.6.1",
    "openinference-instrumentation-dspy>=0.1.36",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm_kit"]
