[project]
name = "rlm-kit"
version = "0.2.0"
description = "A clean, reusable harness for building tasks on DSPy Recursive Language Models (RLMs)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Boik Su" }]
keywords = [
    "dspy",
    "rlm",
    "recursive-language-models",
    "llm",
    "agent",
    "reinforcement-learning",
    "harness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "dspy>=3.2.1",
    "pydantic>=2.9",
]

[project.optional-dependencies]
# Observability is opt-in: the scaffold runs without it.
observe = [
    "langfuse>=4.6.1",
    "openinference-instrumentation-dspy>=0.1.36",
]
mcp = [
    "mcp>=1.0",
]
# JSON-Schema validation (make_json_schema_validator): validate a parsed object against a
# vendored, version-pinned upstream JSON schema. Opt-in — the core scaffold runs without it.
jsonschema = [
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/qazbnm456/rlm-kit"
Repository = "https://github.com/qazbnm456/rlm-kit"
Changelog = "https://github.com/qazbnm456/rlm-kit/blob/main/CHANGELOG.md"
Issues = "https://github.com/qazbnm456/rlm-kit/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27"]  # >=1.27 for PEP 639 SPDX license expressions
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm_kit"]

[tool.ruff]
line-length = 110
target-version = "py311"
